	Rhino's .jar files have been recompressed to reduce their size by a few
	kilobytes, so they do not match the size of the download you would get on
	their respective websites.

2012-06-28  GoldenKevin  (revision 94)
	* Enabled JavaScript version 1.7 features in Rhino.
	* var declarations are replaced with let in all scripts since its behavior
	is more akin to local variable declarations in Java.
	* Don't let scripts capture continuations if client disconnected.

2012-06-30  GoldenKevin  (revision 95)
	* Scripts for Henesys area NPCs with NPC IDs in the 101200x range.

2012-07-04  GoldenKevin  (revision 96)
	* Scripts for Henesys area NPCs with NPC IDs < 9102100 and NPC ID 9200100
	(bowman job advancement, Henesys PQ, Henesys beauty shops, etc.).
	* Added in stub files for unimplemented Lith Harbor scripted NPCs so I don't
	forget about them in the future.

2012-07-08  GoldenKevin  (revision 97)
	* Renamed script API isQuestFinished to isQuestCompleted.
	* Fixed NullPointerException in QuestChecks.hasPet.
	* Finished all NPC scripts for Henesys area.

2012-07-10  GoldenKevin  (revision 98)
	* Fixed Athena Pierce script.
	* Added Ellinia NPC scripts in the 103200x range.

2012-07-11  GoldenKevin  (revision 99)
	* Fixed problems in InventoryTools with regards to equipped inventory
	handling.
	* Finished Ellinia area scripts (or at least created stubs for them).

2012-07-11  GoldenKevin  (revision 100)
	* Fixed messed up reactor drop source position.
	* Reactor and NPC scripts now are named after the script name fields in
	their respective data files instead of their numeric ID. MCBB users must
	execute default_reactor_scripts.sql and default_npc_scripts.sql.

2012-07-11  GoldenKevin  (revision 101)
	* Fixed player NPC script.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.