@@ -1,40 +1,0 @@
-/*
- * ArgonMS MapleStory server emulator written in Java
- * Copyright (C) 2011-2012  GoldenKevin
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- */
-
-/**
- * Duey: Package Deliverer (NPC 9010009)
- * Victoria Road: Henesys (Map 100000000),
- *   Victoria Road: Ellinia (Map 101000000),
- *   Victoria Road: Perion (Map 102000000),
- *   Victoria Road: Kerning City (Map 103000000),
- *   Victoria Road: Lith Harbor (Map 104000000),
- *   Orbis: Orbis (Map 200000000),
- *   El Nath: El Nath (Map 211000000),
- *   Ludibrium: Ludibrium (Map 220000000),
- *   Omega Sector: Omega Sector (Map 221000000),
- *   Aquarium: Aquarium (Map 230000000),
- *   Leafre: Leafre (Map 240000000),
- *   Mu Lung: Mu Lung (Map 250000000),
- *   The Burning Road: Ariant (Map 260000000)
- *
- * Maple Package Service - sends packages from one player to another for a fee.
- *
- * @author GoldenKevin
- */
-
-//TODO: implement Maple Package Service
