@@ -40,6 +40,7 @@ public final class ClientSendOps {
 		PING = 0x11,
 		RELOG_RESPONSE = 0x16,
 		MODIFY_INVENTORY_SLOT = 0x1A,
+		UPDATE_INVENTORY_CAPACITY = 0x1B,
 		PLAYER_STAT_UPDATE = 0x1C,
 		FIRST_PERSON_APPLY_STATUS_EFFECT = 0x1D,
 		FIRST_PERSON_CANCEL_STATUS_EFFECT = 0x1E,
